--- a/LikeDouYin/app/build.gradle
+++ b/LikeDouYin/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.github.castorflex.verticalviewpager:library:19.0.1'
 
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
     implementation files('./releases/pldroid-player-2.2.2.jar')
     //rxjava以来库
     implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
