--- a/LikeDouYin/app/src/main/AndroidManifest.xml
+++ b/LikeDouYin/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartActivity"
+        <activity android:name="com.example.likedouyin.activity.StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DouyinActivity" />
+        <activity android:name="com.example.likedouyin.activity.DouyinActivity" />
     </application>
 
 </manifest>
